--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo.png" />
+    <link rel="icon" href="/frontend/public/imgs/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Gastronomy</title>
   </head>
